tooling/nargo_cli/tests/snapshots/execution_success/regression_unused_nested_array_get/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_A: [[Field; 1]; 2] =
    [[-0xb7a64e7f88a8f94e15824fe7ec7a46da], [-0x40edffbabd444a4d55b9d6711c675e56]];

fn main() {
    if true {
        for idx_a in 7845584091265575028_i64..7845584091265575034_i64 {
            let mut b: [&mut u32; 1] = [&mut 81586902_u32];
            let g: (i64, (i8, Field, Field, Field), u64) = (
                idx_a,
                (
                    -118_i8, 1_Field,
                    155342861061489534793205612322034234097_Field / G_A[1_u32][*b[0_u32] % 1_u32],
                    G_A[*b[0_u32] % 2_u32][*b[0_u32] % 1_u32],
                ), 1313306195659668909_u64,
            );
        }
    }
}
